--- a/stylecopy.css
+++ b/stylecopy.css
@@ -11,20 +11,21 @@
     --veryLightGray: hsl(0, 0%, 98%);
     --white: hsl(0, 0%, 100%);
     }
-      
+    body {
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    flex-direction: column;
+    }
+    
+    
+    
     body, *, ::after, ::before {
         padding: 0;
         margin: 0;
     }
 
-    body {
-        font-size: 18px;
-        display: flex;
-        justify-content: center;
-        min-height: 100vh;
-        flex-direction: column;
-        }
-        
     *{
         box-sizing: border-box;
         color: var(--grayishBlue);
@@ -36,14 +37,12 @@
     
     
     .nav_container {
-        /* display: flex;
+        display: flex;
         justify-content: space-around;
-        align-items: center; */
+        align-items: center;
         min-height: 8vh;
         padding: 30px;
     }
-
-
     .midnav {
         display: flex;
         justify-content: center;
@@ -51,7 +50,6 @@
         letter-spacing: 2px;
     }
     
-    /* Bottoms styling */
     .nav_right button, .col1 button, .nav_bottom button {
         border-radius: 30px;
         height: 45px;
@@ -62,7 +60,9 @@
         color: var(--white);
     }
     
-   
+    .col2 img {
+        /* width: 450px; */
+    }
     .row {
         display: flex;
     }
@@ -79,12 +79,11 @@
         padding-top: 100px;
         letter-spacing: 5px;
     }
-    
     p {
         line-height: 28px;
     }
     h2, h3, h4, h5, h6, p{
-        margin: 40px auto 40px auto;
+        margin: 40px auto 0px auto;
     }
     
     .col2 {
@@ -92,37 +91,38 @@
         background-image: url(images/bg-intro-desktop.svg);
         background-repeat: no-repeat;
         /* background-size: 90% 80%; */
-        /* display: flex;
-        justify-content: center; */
+        display: flex;
+        justify-content: center;
         /* background-position: right -20px bottom -20px; */
     }
-
-  
     
-    
+    .section_grid img {
+        /* width: 50px; */
+        /* height: 50px; */
+        /* margin-bottom: 30px; */
+    }
     .bottom_grid img {
         border-radius: 10px 10px 0px 0px;
         height: 200px;
+        border: 0px solid var(--white);
         margin-bottom: 20px;
     }
     
     .bottom_section {
         background-color: var(--veryLightGray);
+        /* outline: 2px solid yellow; */
     }
     
     .bottom_grid {
         background-color: var(--white);
     }
-
     .bottom_grid p, .bottom_grid h6, .bottom_grid h5  {
-        margin: 20px 18px 20px 18px;
+        margin: 10px 18px 10px 18px;
     }
-
     .mid_section {
         padding: 50px 50px 10px 50px;
         background-color: var(--lightGrayishBlue);
     }
-
     .section_grid {
         display: grid;
         grid-template-columns: repeat(4,1fr);
@@ -160,12 +160,15 @@
     
     }
     .nav_footer a {
+        font-size: 1rem;
         text-decoration: none;
         line-height: 48px;
         color: var(--white);
+        text-align: center;
     }
     
 /* NAVBAR STYLING */
+
 nav {
     display: flex;
     justify-content: center;
@@ -209,12 +212,10 @@ li {
 .logoicons {
     display: flex;
     flex-direction: column;
+    /* justify-content: center; */
     align-items: center;
 }
 
-.logoicons img {
-    margin: 10px;
-}
 
 
     @media screen and (max-width: 768px) {
@@ -223,9 +224,18 @@ li {
             text-align: justify;
         }
 
-    
+        .bottom_grid img {
+            /* border-radius: 10px 10px 0px 0px; */
+            /* height: 200px; */
+            /* width: 10px; */
+            margin-bottom: 20px;
+            /* outline: 2px solid yellow; */
+        }
+        
+        
 
         .nav-links {
+            /* height: 300px; */
             width: 90vw;
             height:40vh;
             display: flex;
@@ -237,9 +247,12 @@ li {
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            /* margin: 5%; */
             transform: translateX(100%);
             transition: transform 0.5s ease-in;
             overflow: hidden;
+
+
         }
 
          .nav_right {
@@ -255,8 +268,7 @@ li {
             cursor: pointer;
         }
        
-        .col2 img {
-            width: 376px;   
+        .col2 img {width: 95vw;   
         }
     
         
@@ -270,8 +282,7 @@ li {
     
         .col2 {
             flex: 100%;
-            order: 1; 
-            margin-bottom: 20px;
+            order: 1;
         }
         
         
@@ -281,16 +292,17 @@ li {
         }
         
         .col1 h1 {
-            padding-top: 30px;
+            padding-top: 10px;
             letter-spacing: 5px;
         }
         
         .section_grid, .bottom_grid {
             display: flex;
             flex-direction: column;
+           
         }
     
-       .section_grid div, .navbar,.mid_section, .col1 {       
+       .section_grid div, .navbar,.mid_section, .col1, .bottom_section {       
            text-align:center;
        }
         
@@ -305,9 +317,8 @@ li {
     }
     .nav_footer {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100vw;
+         flex-direction: column;
+         /* outline: 2px solid yellow; */
     }
     
     footer {
@@ -318,7 +329,10 @@ li {
     }
     
     
-   
+    .nav_footer {
+        justify-content: center;
+        width: 100vw;
+    }
     .footernav1, .nav_bottom {
         text-align: center;
         display: flex;
