--- a/stylecopy.css
+++ b/stylecopy.css
@@ -61,7 +61,7 @@
     }
     
     .col2 img {
-        /* width: 450px; */
+        width: 450px;
     }
     .row {
         display: flex;
@@ -79,27 +79,22 @@
         padding-top: 100px;
         letter-spacing: 5px;
     }
-    p {
-        line-height: 28px;
-    }
-    h2, h3, h4, h5, h6, p{
-        margin: 40px auto 0px auto;
-    }
+    
     
     .col2 {
         flex: 50%;
         background-image: url(images/bg-intro-desktop.svg);
         background-repeat: no-repeat;
-        /* background-size: 90% 80%; */
+        background-size: 90% 80%;
         display: flex;
         justify-content: center;
-        /* background-position: right -20px bottom -20px; */
+        /* background-position: right 5px top 5px; */
     }
     
     .section_grid img {
-        /* width: 50px; */
-        /* height: 50px; */
-        /* margin-bottom: 30px; */
+        width: 50px;
+        height: 50px;
+        margin-bottom: 30px;
     }
     .bottom_grid img {
         border-radius: 10px 10px 0px 0px;
@@ -143,7 +138,7 @@
         display: flex;
         justify-content: space-around;
         background-color: var(--darkBlue);
-        min-height: 250px;
+        min-height: 200px;
         padding: 30px 10px 30px 10px;
     }
     
@@ -151,7 +146,7 @@
     .nav_footer {
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: 80%;
         /* margin-left: 20px; */
         padding: 2px 50px 10px 50px;
     }
@@ -181,7 +176,7 @@ nav {
     justify-content: space-around;
     width: 50%;
     align-items: center;
-    /* outline: 2px solid yellow; */
+    outline: 2px solid yellow;
 
 }
 
@@ -212,27 +207,13 @@ li {
 .logoicons {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
 }
 
 
 
     @media screen and (max-width: 768px) {
-
-        article * {
-            text-align: justify;
-        }
-
-        .bottom_grid img {
-            /* border-radius: 10px 10px 0px 0px; */
-            /* height: 200px; */
-            /* width: 10px; */
-            margin-bottom: 20px;
-            /* outline: 2px solid yellow; */
-        }
-        
-        
 
         .nav-links {
             /* height: 300px; */
@@ -308,12 +289,12 @@ li {
         
        .bottom_section {
            margin-top: 20px;
-           padding: 10px 30px 10px 30px;
+           padding: 5px 30px 2px 30px;
        }
        
        .bottom_grid img {
         height: 100%;
-        width: 100%;
+        width: 300px;
     }
     .nav_footer {
         display: flex;
