--- a/stylecopy.css
+++ b/stylecopy.css
@@ -19,17 +19,16 @@
     flex-direction: column;
     }
     
-    
+     *{
+       
+        box-sizing: border-box;
+        color: var(--grayishBlue);
+        font-family: 'Public Sans', sans-serif;
+    }
     
     body, *, ::after, ::before {
         padding: 0;
         margin: 0;
-    }
-
-    *{
-        box-sizing: border-box;
-        color: var(--grayishBlue);
-        font-family: 'Public Sans', sans-serif;
     }
     
     .attribution { font-size: 11px; text-align: center; }
@@ -40,7 +39,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        min-height: 8vh;
+        min-height: 10vh;
         padding: 30px;
     }
     .midnav {
@@ -175,8 +174,7 @@ nav {
     display: flex;
     justify-content: space-around;
     width: 50%;
-    align-items: center;
-    outline: 2px solid yellow;
+    /* outline: 2px solid yellow; */
 
 }
 
@@ -207,7 +205,7 @@ li {
 .logoicons {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
