--- a/stylecopy.css
+++ b/stylecopy.css
@@ -254,7 +254,8 @@ li {
             cursor: pointer;
         }
        
-        .col2 img {width: 100%;   
+        .col2 img {
+            width: 100%;   
         }
     
         
