--- a/stylecopy.css
+++ b/stylecopy.css
@@ -96,7 +96,10 @@
         /* background-position: right -20px bottom -20px; */
     }
 
-  
+    .col2 img {
+        position: absolute;
+        bottom: -20px;
+   }
     
     
     .bottom_grid img {
